Log stats event data to console
Proof of concept

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,6 +25,10 @@
             $("#manifest").append(stack);
           }
         });
+
+        socket.on('stats', function (data) {
+          console.log(data);
+        });
     </script>
   </body>
 </html>
