Fix build issues, parse json in debug output

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -27,7 +27,7 @@
         });
 
         socket.on('stats', function (data) {
-          console.log(data);
+          console.log(JSON.parse(data));
         });
     </script>
   </body>
