--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,9 +1,22 @@
 <html>
   <body>
-    <div id="manifest"></div>
+    <div id="content"></div>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha256-gvEnj2axkqIj4wbYhPjbWV7zttgpzBVEgHub9AAZQD4=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/files/styles.css"></link>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-    <script type="text/javascript" src="/files/app.js"></script>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
+    <script type="text/babel" src="/files/dashboard.js"></script>
+    <script type="text/babel" src="/files/node.js"></script>
+    <script type="text/babel" src="/files/stack.js"></script>
+    <script type="text/babel" src="/files/service.js"></script>
+    <script type="text/babel" src="/files/task.js"></script>
+    <script type="text/babel" src="/files/application.js"></script>
+
   </body>
 </html>
