--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -35,6 +35,8 @@
     <script type="text/babel" src="/files/node_stats.js"></script>
     <script type="text/babel" src="/files/memory_stats.js"></script>
     <script type="text/babel" src="/files/cpu_stats.js"></script>
+    <script type="text/babel" src="/files/disk_stats.js"></script>
+    <script type="text/babel" src="/files/filesystem_stats.js"></script>
     <script type="text/babel" src="/files/application.js"></script>
 
   </body>
