--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,6 +1,8 @@
 <html>
   <body>
-    <div id="content"></div>
+    <div id="wrapper">
+      <div id="content"></div>
+    </div>
 
     <link
       rel="stylesheet"
@@ -16,6 +18,7 @@
       crossorigin="anonymous"
     >
 
+    <link rel="stylesheet" href="/files/bootstrap.darkly.css"></link>
     <link rel="stylesheet" href="/files/styles.css"></link>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
