--- a/app/files/css/nodes.css
+++ b/app/files/css/nodes.css
@@ -1,26 +1,11 @@
-#wrapper {
-}
-
 #nodes {
   float: left;
   height: 100%;
-  width: 20%;
+  min-width: 20%;
+  max-width: 100%;
   padding: 1em;
   overflow-y: scroll;
-  border-right: 1px dotted #eee;
-}
-
-#stacks {
-  padding: 1em;
-  float: left;
-  height: 100%;
-  width: 75%;
-}
-
-.service {
-  padding: 1em;
-  margin: 1em;
-  border: 1px solid #000;
+  border-right: 1px solid #eee;
 }
 
 .node {
@@ -28,6 +13,10 @@
   padding: 0.2em;
   border-radius: 15px 15px 0px 0px;
   box-shadow: 0px 0px 5px #555;
+}
+
+.node.highlight {
+  border-color: #ff0;
 }
 
 .node h2 {
@@ -62,32 +51,4 @@
   margin: 0.2em;
 }
 
-.node-stats table {
-  width: 100%;
-}
 
-.node-stats th {
-  padding: 0.2em;
-  font-family: monospace;
-}
-
-.node-stats .label {
-  text-align: center;
-  width: 100%;
-  color: #fff;
-  text-shadow: 0px 0px 5px #555;
-  padding: 0.2em;
-}
-
-.disk-stats .label {
-  font-family: monospace;
-}
-
-.disk-stats .badge {
-  color: #fff;
-}
-
-.node-stats .progress {
-  padding: 0.2em;
-  margin: 0.2em;
-}
