--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -18,29 +18,16 @@
       crossorigin="anonymous"
     >
 
-    <link rel="stylesheet" href="/files/bootstrap.darkly.css"></link>
-    <link rel="stylesheet" href="/files/styles.css"></link>
+    <link rel="stylesheet" href="/files/css/bootstrap.darkly.css"></link>
+    <link rel="stylesheet" href="/files/css/base.css"></link>
+    <link rel="stylesheet" href="/files/css/nodes.css"></link>
+    <link rel="stylesheet" href="/files/css/stacks.css"></link>
+    <link rel="stylesheet" href="/files/css/node_stats.css"></link>
+    <link rel="stylesheet" href="/files/css/services.css"></link>
+    <link rel="stylesheet" href="/files/css/tasks.css"></link>
+    <link rel="stylesheet" href="/files/css/toggles.css"></link>
+    <link rel="stylesheet" href="/files/css/dashboard.css"></link>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-    <script type="text/babel" src="/files/dashboard.js"></script>
-    <script type="text/babel" src="/files/node.js"></script>
-    <script type="text/babel" src="/files/stack.js"></script>
-    <script type="text/babel" src="/files/service.js"></script>
-    <script type="text/babel" src="/files/task.js"></script>
-    <script type="text/babel" src="/files/node_stats.js"></script>
-    <script type="text/babel" src="/files/memory_stats.js"></script>
-    <script type="text/babel" src="/files/cpu_stats.js"></script>
-    <script type="text/babel" src="/files/disk_stats.js"></script>
-    <script type="text/babel" src="/files/filesystem_stats.js"></script>
-    <script type="text/babel" src="/files/application.js"></script>
-
+    <script src="files/bundle.js"></script>
   </body>
 </html>
