--- a/app/files/css/tasks.css
+++ b/app/files/css/tasks.css
@@ -4,9 +4,7 @@
   display: inline-block;
   padding: 0.2em 1em;
   font-size: 1.0em;
-  color: #0b0;
-  margin-top: 1em;
-  margin-left: 1em;
+  color: #9d9;
   background-color: #0c0c0c;
   border: 2px solid #7d7d7d;
   border-radius: 5px;
@@ -14,4 +12,21 @@
 
 .task h3.highlight {
   border-color: #ff0;
+}
+
+.task .badge {
+  margin: 0 0.2em;
+  text-shadow: 0px 0px 5px #555;
+}
+
+.tasks {
+  margin-left: 1em;
+  margin-top: 1em;
+}
+
+span.task {
+  padding: 0.4em;
+  border: 2px solid #7d7d7d;
+  border-radius: 15px 15px 0px 0px;
+  padding-bottom: 0.6em;
 }
