--- a/app/files/css/tasks.css
+++ b/app/files/css/tasks.css
@@ -4,14 +4,10 @@
   display: inline-block;
   padding: 0.2em 1em;
   font-size: 1.0em;
-  color: #9d9;
-  background-color: #0c0c0c;
-  border: 2px solid #7d7d7d;
-  border-radius: 5px;
 }
 
-.task h3.highlight {
-  border-color: #ff0;
+.task.highlight {
+  border: 1px solid #ff0;
 }
 
 .task .badge {
@@ -21,12 +17,11 @@
 
 .tasks {
   margin-left: 1em;
-  margin-top: 1em;
+  margin-top: 2em;
 }
 
 span.task {
-  padding: 0.4em;
-  border: 2px solid #7d7d7d;
-  border-radius: 15px 15px 0px 0px;
-  padding-bottom: 0.6em;
+  padding: 0.8em;
+  border: 1px solid #eee;
+  border-radius: 5px;
 }
