--- a/app/files/css/nodes.css
+++ b/app/files/css/nodes.css
@@ -13,6 +13,7 @@
   padding: 0.2em;
   border-radius: 15px 15px 0px 0px;
   box-shadow: 0px 0px 5px #555;
+  margin-bottom: 1em;
 }
 
 .node.highlight {
