--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -28,7 +28,6 @@
     <link rel="stylesheet" href="/files/css/toggles.css"></link>
     <link rel="stylesheet" href="/files/css/dashboard.css"></link>
 
-    <script src="files/bundle.js"></script>
-    <!-- <script src="http://localhost:8081/files/bundle.js"></script> -->
+    <script src="/files/bundle.js"></script>
   </body>
 </html>
