Fix grid layout when nodes screen is expanded

--- a/app/files/css/dashboard.css
+++ b/app/files/css/dashboard.css
@@ -17,6 +17,10 @@ h2.section-header {
   display: inline-block;
 }
 
+.section.wrap {
+  white-space: wrap;
+}
+
 #stacks {
   position: absolute;
 }
