Decrease service name brightness
Ensure that Stack Name is more prominent.

--- a/app/files/css/services.css
+++ b/app/files/css/services.css
@@ -8,6 +8,10 @@
   color: #999;
 }
 
+.service-name {
+  color: #999;
+}
+
 .service span.title {
   text-transform: uppercase;
   font-size: 1.2em;
