--- a/app/files/css/services.css
+++ b/app/files/css/services.css
@@ -14,7 +14,8 @@
 
 .service span.title {
   text-transform: uppercase;
-  font-size: 1.2em;
+  font-size: 1.5em;
+  font-family: monospace;
 }
 
 .service .ports {
