Formalise expanding/collapsing areas
Sections (elements in the dashboard - nodes and stacks) can be
minimized/maximized.

Stacks can be expanded/collapsed.

Now all applicable components implement some kind of state-aware
rendering to display themselves in the currently-desired form.

Add misc. UX improvements - ready for release.

--- a/app/files/css/node_stats.css
+++ b/app/files/css/node_stats.css
@@ -27,3 +27,25 @@
   padding: 0.2em;
   margin: 0.2em;
 }
+
+.minimized .node-stats .meter {
+  display: inline-block;
+  width: 30%;
+}
+
+.minimized .load-averages {
+  display: inline-block;
+  width: 40%;
+}
+
+.minimized .load-averages .badge {
+  display: inline;
+}
+
+
+.minimized .node-stats .progress {
+}
+
+.minimized .node-stats .progress .label {
+  visibility: hidden;
+}
