Last-minute UI tidy-ups
A couple of tooltips and some polishing. Also get rid of the terrible
styling of hostnames in the maximized view.

--- a/app/files/css/node_stats.css
+++ b/app/files/css/node_stats.css
@@ -28,14 +28,17 @@
   margin: 0.2em;
 }
 
+.minimized .node-stats .meter.memory {
+  margin-left: 0.4em;
+}
+
 .minimized .node-stats .meter {
   display: inline-block;
-  width: 30%;
+  width: 28%;
 }
 
 .minimized .load-averages {
   display: inline-block;
-  width: 40%;
 }
 
 .minimized .load-averages .badge {
