--- a/app/files/css/services.css
+++ b/app/files/css/services.css
@@ -53,6 +53,23 @@
   color: #dd9;
 }
 
+.service .environment {
+  font-family: monospace;
+  margin-left: 2em;
+}
+
+.service .environment .key {
+  color: #ddd;
+}
+
+.service .environment .value {
+  color: #999;
+}
+
+.service .environment .syntax {
+  color: #555;
+}
+
 .service .tag {
   font-family: monospace;
   padding-left: 0.2em;
