--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,13 +20,18 @@
 
     <link rel="stylesheet" href="/files/css/bootstrap.darkly.css"></link>
     <link rel="stylesheet" href="/files/css/base.css"></link>
-    <link rel="stylesheet" href="/files/css/nodes.css"></link>
-    <link rel="stylesheet" href="/files/css/stacks.css"></link>
+    <link rel="stylesheet" href="/files/css/node.css"></link>
+    <link rel="stylesheet" href="/files/css/stack.css"></link>
     <link rel="stylesheet" href="/files/css/node_stats.css"></link>
-    <link rel="stylesheet" href="/files/css/services.css"></link>
-    <link rel="stylesheet" href="/files/css/tasks.css"></link>
+    <link rel="stylesheet" href="/files/css/service.css"></link>
+    <link rel="stylesheet" href="/files/css/environment.css"></link>
+    <link rel="stylesheet" href="/files/css/task.css"></link>
     <link rel="stylesheet" href="/files/css/dashboard.css"></link>
 
-    <script src="/files/bundle.js"></script>
+    {% if env == 'development' %}
+      <script src="http://localhost:8081/files/bundle.js"></script>
+    {% else %}
+      <script src="/files/bundle.js"></script>
+    {% endif %}
   </body>
 </html>
