--- a/app/files/css/service.css
+++ b/app/files/css/service.css
@@ -53,6 +53,10 @@
   color: #dd9;
 }
 
+tr.service.highlight {
+  background-color: rgba(240,240,102,0.1);
+}
+
 .service .tag {
   font-family: monospace;
   padding-left: 0.2em;
