--- a/app/files/css/environment.css
+++ b/app/files/css/environment.css
@@ -1,6 +1,6 @@
 .environment {
   font-family: monospace;
-  margin-left: 1em;
+  display: inline;
 }
 
 .environment table {
@@ -23,4 +23,27 @@
 
 .environment .syntax {
   color: #555;
+}
+
+.environment .btn {
+  margin-bottom: 0.4em;
+  font-family: sans-serif;
+  font-size: 0.7em;
+  padding: 0.2em 0.4em;
+  margin-left: 1em;
+}
+
+.environment .btn .icon {
+  margin-left: 0.2em;
+}
+
+.environment .keypairs {
+  background-color: #1d1d1d;
+  padding: 1em;
+  margin-left: 1em;
+  display: block;
+  min-width: 60%;
+  font-size: 0.8em;
+  position: absolute;
+  border: 1px solid rgba(240,240,240,0.3);
 }
