Display running count instead of total count for tasks
Fix alignment of maximised node labels.

--- a/app/files/css/node.css
+++ b/app/files/css/node.css
@@ -116,6 +116,10 @@
   visibility: hidden;
 }
 
+.maximized .node .badge.hidden {
+  display: none;
+}
+
 .node .alert {
   padding: 0.2em;
   margin: 0.2em;
