Add container stats
Collate statistics for all containers running on a node and then
cross-reference with the relevant tasks to display CPU/memory and
network/disk I/O usage.

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="/files/css/service.css"></link>
     <link rel="stylesheet" href="/files/css/environment.css"></link>
     <link rel="stylesheet" href="/files/css/task.css"></link>
+    <link rel="stylesheet" href="/files/css/task_stats.css"></link>
     <link rel="stylesheet" href="/files/css/dashboard.css"></link>
 
     {% if env == 'development' %}
