--- a/app/files/css/task.css
+++ b/app/files/css/task.css
@@ -7,10 +7,10 @@
 }
 
 .task .badge {
-  margin: 0.4em 0;
+  margin: 0.4em 0.2em;
   text-shadow: 0px 0px 5px #555;
   text-align: right;
-  display: block;
+  display: inline;
 }
 
 .badges {
