Fetch container stats synchronously
Encountered very strange issues (maxing out CPU, stats only appearing
from one node per swarm) - trying without threads and keeping things
simple.

--- a/app/files/css/node_stats.css
+++ b/app/files/css/node_stats.css
@@ -32,9 +32,13 @@
   margin-left: 0.4em;
 }
 
+.minimized .node-stats {
+  margin-bottom: 0.2em;
+}
+
 .minimized .node-stats .meter {
   display: inline-block;
-  width: 28%;
+  width: 25%;
 }
 
 .minimized .load-averages {
