Move all CSS into Sass pipeline
Avoid ordering issues by putting all CSS/SCSS through the same pipeline.

--- a/app/files/css/main.scss
+++ b/app/files/css/main.scss
@@ -1,3 +1,6 @@
+@import "reset.css";
+@import "bootstrap.css";
+@import "bootstrap.darkly.css";
 @import "base.scss";
 @import "dashboard.scss";
 @import "environment.scss";
