--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+    {% if env == 'production' %}
+      <link rel="stylesheet" href="/files/main.css"></link>
+    {% endif %}
+  </head>
   <body>
     <div id="wrapper">
       <div id="content"></div>
