--- a/app/files/css/main.scss
+++ b/app/files/css/main.scss
@@ -3,7 +3,8 @@
 @import "bootstrap.darkly.css";
 @import "base.scss";
 @import "dashboard.scss";
-@import "environment.scss";
+@import "mapping.scss";
+@import "mounts.scss";
 @import "node.scss";
 @import "node_stats.scss";
 @import "service.scss";
