--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -7,10 +7,10 @@
 }
 
 .node {
-  border: 1px solid #333;
+  border: 1px solid $background-color-secondary;
   padding: 0.2em;
   border-radius: 15px;
-  box-shadow: 0px 0px 5px #555;
+  box-shadow: 0px 0px 5px $accent-dark;
   margin-bottom: 1em;
   width: 18em;
 }
@@ -24,7 +24,7 @@
   width: 1em;
   height: 1em;
   display: inline-block;
-  background-color: #9d9;
+  background-color: $status-light-healthy;
   border-radius: 1em;
   vertical-align: middle;
   visibility: hidden;
@@ -66,7 +66,7 @@
 }
 
 .node.highlight {
-  box-shadow: 0px 0px 10px #dd9;
+  box-shadow: 0px 0px 10px $highlight-select;
 }
 
 .node h2 {
@@ -88,7 +88,7 @@
   font-family: monospace;
   display: inline-block;
   text-transform: uppercase;
-  color: #ddd;
+  color: $label-text;
 }
 
 .maximized .status {
