--- a/app/files/css/service.scss
+++ b/app/files/css/service.scss
@@ -5,16 +5,11 @@
 
 .service h2 {
   font-size: 1.2em;
-  color: #999;
-}
-
-.image {
-  color: #ccc;
-  padding: 0.2em 0.6em;
+  color: $label-text-dark;
 }
 
 .service-name {
-  color: #999;
+  color: $label-text-dark;
 }
 
 .service-name .badge {
@@ -81,15 +76,15 @@ tr.service.highlight.networked {
 .service .tag {
   font-family: monospace;
   padding-left: 0.2em;
-  color: #adacac;
-  background-color: #3d3f42;
+  background-color: $background-color-secondary;
+  color: $label-text-subheading;
   margin: 0.8em;
   padding: 0.2em;
   margin-left: 1em;
 }
 
 .service .updated {
-  color: #4d4;
+  color: $updated;
   float: left;
   margin-right: 0.4em;
 }
@@ -106,8 +101,8 @@ tr.service.highlight.networked {
   margin: 1px;
   margin-right: 0.4em;
   border-radius: 50%;
-  border: 2px solid #dd4;
-  border-color: #dd4 transparent #dd4 transparent;
+  border: 2px solid $updating;
+  border-color: $updating transparent $updating transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
 
