Fix display of node RAM/CPU usage
Also tweak display of environment/mounts popup (show border at bottom to
hopefully make scrollability a bit more obvious).

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -54,7 +54,12 @@ $mapping-value: #999;
   border: 1px solid #888;
   height: auto;
   max-height: 60%;
-  overflow-y: scroll;
   width: 80%;
   margin: 5em auto;
+
+  .viewport {
+    overflow-y: scroll;
+    border-bottom: 1px solid $accent-dark;
+    margin-bottom: 1em;
+  }
 }
