--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -70,7 +70,7 @@
 }
 
 .node h2 {
-  font-size: 1em;
+  font-size: 1rem;
   padding-left: 0.4em;
   padding-right: 0.4em;
   width: calc(100% - 5.4em);
