Improve leader/manager badge flow
Keep badges in same position if hostname wraps.

--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -91,6 +91,10 @@
   color: $label-text;
 }
 
+.role.badge, .leader.badge {
+  float: right;
+}
+
 .maximized .status {
   position: absolute;
   margin: 0.4em;
