Show disk status icon for minimised nodes
The most-full file-system status is reflected by a coloured hard drive
icon, i.e. if one file system is in danger state and all others are in
success state then the single danger state will trump the success states
and be displayed.

Expanding the node view will display more details.

--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -95,6 +95,15 @@
   float: right;
 }
 
+.node {
+  .icon.disks {
+    float: right;
+    position: absolute;
+    height: 1.2rem;
+    width: 1.2rem;
+  }
+}
+
 .maximized .status {
   position: absolute;
   margin: 0.4em;
