Tweak node badge alignment
Badges are floating again so we want them to consume space as needed.

--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -121,12 +121,8 @@
   margin: 0.2em;
 }
 
-.node .badge.visible {
-  visibility: visible;
-}
-
 .node .badge.hidden {
-  visibility: hidden;
+  display: none;
 }
 
 .maximized .node .badge.hidden {
