Tweak network icon styling
Leave a little more space for network icon so it can fit correctly
between sizing button and stacks table.

--- a/app/files/css/stack.scss
+++ b/app/files/css/stack.scss
@@ -52,6 +52,7 @@ button.stack {
 
 table.stacks {
   width: 100%;
+  margin-left: 0.4em;
   border-spacing: 0 0.4em;
   border-collapse: separate;
 }
