Improve awareness of replicas
Be aware of replicated/global mode and calculate the correct number of
desired replicas for any service (either the specified number in
replicated mode or the number of nodes in global mode). Display icon for
global/replicated mode.

General improvements to UI - improve (?) node heartbeat visualisation,
node stats layout and labelling, ordering of items in stack view for
relevance and consistency, account for "other" services (i.e. all those
not in a stack), modify Darkly default green colour as it was a bit
bright for my taste.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -9,7 +9,8 @@ $background-color: #222;
 $background-color-secondary: #333;
 $background-color-translucent: rgba(34, 34, 34, 0.9);
 
-$status-light-healthy: #9d9;
+$status-light-healthy: #252;
+$status-light-healthy-shadow: rgba(0, 0, 34, 0.7);
 
 $highlight-select: #dd9;
 
@@ -39,6 +40,14 @@ html {
 
 .badge.dense {
   margin: 0 !important;
+}
+
+.tooltip {
+  color: $label-text-light !important;
+
+  em {
+    color: $label-text-dark !important;
+  }
 }
 
 .modal-wrapper {
