--- a/app/files/css/stack.scss
+++ b/app/files/css/stack.scss
@@ -98,7 +98,7 @@ table.stacks {
   padding: 0.2em 0.6em;
 }
 
-.collapsed .image span {
+.collapsed .image-id {
   font-family: monospace;
   background-color: $background-color-secondary;
   color: $label-text-subheading;
