--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     {% if env == 'production' %}
-      <link rel="stylesheet" href="/files/main.css"></link>
+      <link rel="stylesheet" href="/files/main-{{ css_md5 }}.css"></link>
     {% endif %}
   </head>
   <body>
@@ -11,7 +11,7 @@
     {% if env == 'development' %}
       <script src="http://localhost:8081/files/bundle.js"></script>
     {% else %}
-      <script src="/files/bundle.js"></script>
+      <script src="/files/bundle-{{ js_md5 }}.js"></script>
     {% endif %}
   </body>
 </html>
