--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -9,7 +9,7 @@ $background-color: #222;
 $background-color-secondary: #333;
 $background-color-translucent: rgba(34, 34, 34, 0.9);
 
-$status-light-healthy: #252;
+$status-light-healthy: #28a74555;
 $status-light-healthy-shadow: rgba(0, 0, 34, 0.7);
 
 $highlight-select: #dd9;
